--- a/about/index.html
+++ b/about/index.html
@@ -371,7 +371,7 @@ NexT.utils.loadComments(document.querySelector('#gitalk-container'), () => {
     var gitalk = new Gitalk({
       clientID    : 'Iv1.44fea5e20c77ff5c',
       clientSecret: '62bc82769e5653e2a4e1c486821aca3d72105050',
-      repo        : 'https://github.com/LinJHS/LinJHS-Hexo-Comment.git',
+      repo        : 'LinJHS-Hexo-Comment',
       owner       : 'LinJHS',
       admin       : ['LinJHS'],
       id          : '3be7aa98d992907175cbd79c194399f2',
