--- a/about/index.html
+++ b/about/index.html
@@ -375,7 +375,7 @@ NexT.utils.loadComments(document.querySelector('#gitalk-container'), () => {
       owner       : 'LinJHS',
       admin       : ['LinJHS'],
       id          : '3be7aa98d992907175cbd79c194399f2',
-      proxy       : '',
+      proxy       : 'https://netnr-proxy.cloudno.de/?https://github.com/login/oauth/access_token',
         language: 'zh-CN',
       distractionFreeMode: true
     });
