--- a/about/index.html
+++ b/about/index.html
@@ -352,9 +352,14 @@
                 console.error('Failed to save visitor count', error);
               });
           } else {
-              leancloudSelector(url).innerText = 'Counter not initialized! More info at console err msg.';
-              console.error('ATTENTION! LeanCloud counter has security bug, see how to solve it here: https://github.com/theme-next/hexo-leancloud-counter-security. \n However, you can still use LeanCloud without security, by setting `security` option to `false`.');
-            
+              Counter('post', '/classes/Counter', { title, url, time: 1 })
+                .then(response => response.json())
+                .then(() => {
+                  leancloudSelector(url).innerText = 1;
+                })
+                .catch(error => {
+                  console.error('Failed to create', error);
+                });
           }
         })
         .catch(error => {
@@ -381,7 +386,7 @@
         });
     }
 
-    let { app_id, app_key, server_url } = {"enable":true,"app_id":"abt1ph0MToqKU0goGITz9HXe-MdYXbMMI","app_key":"igk0Kj37XCJcHe14Tu9Z9slp","server_url":null,"security":true};
+    let { app_id, app_key, server_url } = {"enable":true,"app_id":"lxErqfpP9B2MnRIZ3wMCGSzh-9Nh9j0Va","app_key":"OZ6TL8Pje9AWcLrGPMKMcEF1","server_url":null,"security":false};
     function fetchData(api_server) {
       var Counter = (method, url, data) => {
         return fetch(`${api_server}/1.1${url}`, {
