--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         });
     }
 
-    let { app_id, app_key, server_url } = {"enable":true,"app_id":"lxErqfpP9B2MnRIZ3wMCGSzh-9Nh9j0Va","app_key":"OZ6TL8Pje9AWcLrGPMKMcEF1","server_url":null,"security":false};
+    let { app_id, app_key, server_url } = {"enable":true,"app_id":"xA7vHfV5hTiT3MD9peshOsKG-gzGzoHsz","app_key":"B4WKMjiMvcwVyxsVtZW9IMKO","server_url":"https://leancloud.cn","security":false};
     function fetchData(api_server) {
       var Counter = (method, url, data) => {
         return fetch(`${api_server}/1.1${url}`, {
