--- a/about/index.html
+++ b/about/index.html
@@ -381,7 +381,7 @@
         });
     }
 
-    let { app_id, app_key, server_url } = {"enable":true,"app_id":"xA7vHfV5hTiT3MD9peshOsKG-gzGzoHsz","app_key":"B4WKMjiMvcwVyxsVtZW9IMKO","server_url":null,"security":true};
+    let { app_id, app_key, server_url } = {"enable":true,"app_id":"xA7vHfV5hTiT3MD9peshOsKG-gzGzoHsz","app_key":"B4WKMjiMvcwVyxsVtZW9IMKO","server_url":"https://xa7vhfv5.lc-cn-n1-shared.com","security":true};
     function fetchData(api_server) {
       var Counter = (method, url, data) => {
         return fetch(`${api_server}/1.1${url}`, {
