--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         });
     }
 
-    let { app_id, app_key, server_url } = {"enable":true,"app_id":"xA7vHfV5hTiT3MD9peshOsKG-gzGzoHsz","app_key":"B4WKMjiMvcwVyxsVtZW9IMKO","server_url":null,"security":true};
+    let { app_id, app_key, server_url } = {"enable":true,"app_id":"xA7vHfV5hTiT3MD9peshOsKG-gzGzoHsz","app_key":"B4WKMjiMvcwVyxsVtZW9IMKO","server_url":"https://leancloud.cn","security":true};
     function fetchData(api_server) {
       var Counter = (method, url, data) => {
         return fetch(`${api_server}/1.1${url}`, {
